créer un projet java 1. finir la fonction de affichier le status de table 2. finir la fonction de valider un RDV 3. finir la fonction de annuler un RDV 4. finir la fonction de quiiter le programme par cliquez le Deconnexion 5. finir la fonction pour afficher le menu 6.finir demander/ajouter les class cuisine et les sous-class 7. developer le fonction de l'addition 8.afficher une facture 9.creer les foctions de parametrage par kayiba