@@ -11,6 +11,7 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.lang.String;
+import java.util.stream.Collectors;
 
 /*
  * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
@@ -70,7 +71,8 @@ public static List<Menu> loadMenuData(String fileName) {
             StringBuilder line = new StringBuilder();
             line.append(menu.getMenuId()).append(";")
                 .append(menu.getnom()).append(";")
-                .append(String.join("|", menu.getPlat().stream().map(Cuisine::getNom).toList())).append(";")
+                //.append(String.join("|", menu.getPlat().stream().map(Cuisine::getNom).toList())).append(";")
+                .append(String.join("|", menu.getPlat().stream().map(Cuisine::getNom).collect(Collectors.toList()))).append(";")
                 .append(menu.getType()).append(";")
                 .append(String.format("%.2f", menu.getPrix()).replace(",", ".")).append(";")
                 .append(menu.getQuantite());
@@ -150,13 +152,18 @@ public static List<Menu> loadMenuData(String fileName) {
             }
         });
 
-        jTextField4.setText("salade");
+        jTextField4.setText("légume...");
+        jTextField4.addActionListener(new java.awt.event.ActionListener() {
+            public void actionPerformed(java.awt.event.ActionEvent evt) {
+                jTextField4ActionPerformed(evt);
+            }
+        });
 
-        jTextField5.setText("...");
+        jTextField5.setText("Formage...");
 
-        jTextField6.setText("...");
+        jTextField6.setText("Source...");
 
-        jTextField7.setText("...");
+        jTextField7.setText("Autre...");
 
         javax.swing.GroupLayout jPanel1Layout = new javax.swing.GroupLayout(jPanel1);
         jPanel1.setLayout(jPanel1Layout);
@@ -180,27 +187,30 @@ public static List<Menu> loadMenuData(String fileName) {
                                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
                                 .addComponent(jTextField1, javax.swing.GroupLayout.PREFERRED_SIZE, 64, javax.swing.GroupLayout.PREFERRED_SIZE)))
                         .addGap(89, 89, 89))
-                    .addGroup(jPanel1Layout.createSequentialGroup()
-                        .addComponent(jLabel5)
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                        .addComponent(jComboBox1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addGap(70, 70, 70))
-                    .addGroup(jPanel1Layout.createSequentialGroup()
-                        .addComponent(jLabel6)
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                        .addComponent(jTextField4, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                        .addGap(86, 86, 86))
-                    .addGroup(jPanel1Layout.createSequentialGroup()
-                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(jLabel9)
-                            .addComponent(jLabel8)
-                            .addComponent(jLabel7))
-                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
-                            .addComponent(jTextField5, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                            .addComponent(jTextField6, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
-                            .addComponent(jTextField7, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
-                        .addGap(86, 86, 86))))
+                    .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, jPanel1Layout.createSequentialGroup()
+                        .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.TRAILING)
+                            .addGroup(javax.swing.GroupLayout.Alignment.LEADING, jPanel1Layout.createSequentialGroup()
+                                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                                    .addComponent(jLabel9)
+                                    .addComponent(jLabel8)
+                                    .addComponent(jLabel7))
+                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING, false)
+                                    .addComponent(jTextField5, javax.swing.GroupLayout.DEFAULT_SIZE, 109, Short.MAX_VALUE)
+                                    .addComponent(jTextField6)
+                                    .addComponent(jTextField7)))
+                            .addGroup(jPanel1Layout.createSequentialGroup()
+                                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                                    .addComponent(jLabel5)
+                                    .addComponent(jLabel6))
+                                .addGroup(jPanel1Layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+                                    .addGroup(jPanel1Layout.createSequentialGroup()
+                                        .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
+                                        .addComponent(jComboBox1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
+                                    .addGroup(jPanel1Layout.createSequentialGroup()
+                                        .addGap(194, 194, 194)
+                                        .addComponent(jTextField4)))))
+                        .addGap(70, 70, 70))))
             .addGroup(jPanel1Layout.createSequentialGroup()
                 .addGap(190, 190, 190)
                 .addComponent(jButton2)
@@ -271,53 +281,12 @@ public static List<Menu> loadMenuData(String fileName) {
                     .addComponent(jButton1)
                     .addComponent(jLabel1))
                 .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, javax.swing.GroupLayout.DEFAULT_SIZE, Short.MAX_VALUE)
-                .addComponent(jPanel1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
+                .addComponent(jPanel1, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE)
+                .addContainerGap())
         );
 
         pack();
     }// </editor-fold>//GEN-END:initComponents
-
-    private void jButton2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton2ActionPerformed
-        // TODO add your handling code here:
-        
-        NouveauMenu = new Menu();
-        Cuisine ingredient1 = new Cuisine(jTextField4.getText());
-        Plat.add(ingredient1);
-        if(!jTextField5.getText().trim().isEmpty()&&!jTextField5.getText().equals("...")){
-        Cuisine ingredient2 = new Cuisine(jTextField5.getText());
-        Plat.add(ingredient2);
-        
-        }
-        if(!jTextField6.getText().trim().isEmpty()&&!jTextField6.getText().equals("...")){
-        Cuisine ingredient3 = new Cuisine(jTextField6.getText());
-        Plat.add(ingredient3);
-        }
-        if(!jTextField7.getText().trim().isEmpty()&&!jTextField7.getText().equals("...")){
-        Cuisine ingredient4 = new Cuisine(jTextField7.getText());
-        Plat.add(ingredient4);
-        }
-        
-        
-
-    
-    
-    
-    
-    
-         NouveauMenu.setNom(jTextField1.getText()) ;
-         NouveauMenu.setPrix(Float.parseFloat(jTextField2.getText().replace(",", ".")));
-         NouveauMenu.setQuantite(Integer.parseInt(jTextField3.getText()));
-         NouveauMenu.setType(jComboBox1.getSelectedItem().toString());
-         
-        NouveauMenu.setPlat(Plat);
-        menuList.add(NouveauMenu);
-         
-         enregistrerMenu(menuList);
-        javax.swing.JOptionPane.showMessageDialog(this, "Le nouveau Menu "+NouveauMenu.getnom()+" a bien été créer", "Confirmation", javax.swing.JOptionPane.INFORMATION_MESSAGE);
-        InterfaceMenu InterfaceMenu1 = new InterfaceMenu();
-        InterfaceMenu1.setVisible(true);
-        this.dispose();
-    }//GEN-LAST:event_jButton2ActionPerformed
 
     private void jButton1ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton1ActionPerformed
         // TODO add your handling code here:
@@ -325,6 +294,45 @@ public static List<Menu> loadMenuData(String fileName) {
         InterfaceMenu1.setVisible(true);
         this.dispose();
     }//GEN-LAST:event_jButton1ActionPerformed
+
+    private void jTextField4ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jTextField4ActionPerformed
+        // TODO add your handling code here:
+    }//GEN-LAST:event_jTextField4ActionPerformed
+
+    private void jButton2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton2ActionPerformed
+        // TODO add your handling code here:
+
+        NouveauMenu = new Menu();
+        Cuisine ingredient1 = new Cuisine(jTextField4.getText());
+        Plat.add(ingredient1);
+        if(!jTextField5.getText().trim().isEmpty()&&!jTextField5.getText().equals("...")){
+            Cuisine ingredient2 = new Cuisine(jTextField5.getText());
+            Plat.add(ingredient2);
+
+        }
+        if(!jTextField6.getText().trim().isEmpty()&&!jTextField6.getText().equals("...")){
+            Cuisine ingredient3 = new Cuisine(jTextField6.getText());
+            Plat.add(ingredient3);
+        }
+        if(!jTextField7.getText().trim().isEmpty()&&!jTextField7.getText().equals("...")){
+            Cuisine ingredient4 = new Cuisine(jTextField7.getText());
+            Plat.add(ingredient4);
+        }
+
+        NouveauMenu.setNom(jTextField1.getText()) ;
+        NouveauMenu.setPrix(Float.parseFloat(jTextField2.getText().replace(",", ".")));
+        NouveauMenu.setQuantite(Integer.parseInt(jTextField3.getText()));
+        NouveauMenu.setType(jComboBox1.getSelectedItem().toString());
+
+        NouveauMenu.setPlat(Plat);
+        menuList.add(NouveauMenu);
+
+        enregistrerMenu(menuList);
+        javax.swing.JOptionPane.showMessageDialog(this, "Le nouveau Menu "+NouveauMenu.getnom()+" a bien été créer", "Confirmation", javax.swing.JOptionPane.INFORMATION_MESSAGE);
+        InterfaceMenu InterfaceMenu1 = new InterfaceMenu();
+        InterfaceMenu1.setVisible(true);
+        this.dispose();
+    }//GEN-LAST:event_jButton2ActionPerformed
 
     /**
      * @param args the command line arguments
